[gd_scene load_steps=4 format=3 uid="uid://21f4vyhhv3pd"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_7lcjn"]
[ext_resource type="Texture2D" uid="uid://bx2k3jt0khlj6" path="res://graphics/player/player.png" id="2_3tkh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a34w3"]
radius = 59.0085

[node name="Player" type="CharacterBody2D"]
collision_mask = 53
script = ExtResource("1_7lcjn")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 2)
rotation = 1.5708
texture = ExtResource("2_3tkh8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a34w3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GrenadeTimer" type="Timer" parent="."]

[node name="ParticleStartPositions" type="Node2D" parent="."]
rotation = 1.5708

[node name="Position1" type="Marker2D" parent="ParticleStartPositions"]
position = Vector2(21, -132)

[node name="Position2" type="Marker2D" parent="ParticleStartPositions"]
position = Vector2(26, -127)

[node name="Position3" type="Marker2D" parent="ParticleStartPositions"]
position = Vector2(17, -127)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
